# SandboxAgent

./: .gitignore  README.md  pyproject.toml
src/docker_sandbox/: cli.py  container_guard.py  landlock_runner.py  models.py  profiles.py  run_results.py  sandbox_container.py  sandbox_spec.py
src/docker_sandbox/dockerfile/: Dockerfile  remove_python_packaging.py  runtime_sitecustomize.py
src/otto_agent/: __init__.py  agent.py  function_tool.py  guardrail.py  model.py  openai_helper.py  reducer.py  skilled_agent.py  state.py  tool.py  utilities.py  validation.py  vocabulary.py
src/otto_agent/agents/: __init__.py  model_decision.py  model_prompt.py  skill.py  skill_validation.py
src/otto_agent/harness/: __init__.py  rules.py  runner.py  tool_executor.py  trace.py  validation.py
src/sandbox_agent/: __init__.py  adk_agent.py  adk_tools.py  agent.py  anthropic_agent.py  anthropic_claude_agent.py  anthropic_claude_tools.py  anthropic_tools.py  beeai_agent.py  beeai_tools.py  cli.py  crewai_agent.py  crewai_tools.py  langchain_agent.py  langchain_tools.py  langgraph_agent.py  langgraph_tools.py  microsoft_agent.py  microsoft_tools.py  openai_agent.py  openai_tools.py  otto_agent.py  otto_tools.py  sandbox_spec.toml  tools.py
src/sandbox_tester/: runner.py
tests/: test_agent.py  test_sandbox_spec.py  test_sandbox_tester_serialization.py  test_tools.py
