[project]
name = "sandbox-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "openai-agents",
    "pillow",
    "playwright",
]

[project.optional-dependencies]
dev = [
    "agent-framework",
    "anthropic",
    "beeai-framework",
    "claude-agent-sdk",
    "crewai",
    "google-adk",
    "langchain",
    "langchain-openai",
    "langgraph",
    "paramiko==5.0.0",
    "pymysql==1.2.0",
    "pyright",
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
